--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h1{
     cursor: pointer;
     border-radius: 5px;
     width: 7rem;
-    height: 2rem;
+    height: 1.6rem;
 }
 .info-header{
     background-color: gray;
@@ -198,7 +198,7 @@ h2{
 }
 .action-time .action-button{
     background-color: transparent;
-    color: #e5e7eb;
+    color: #f9faf8;
     font-family: 'Roboto';
     font-weight:500;
     cursor: pointer;
