--- a/css/about-us.css
+++ b/css/about-us.css
@@ -178,7 +178,7 @@ h4{
 }
 .qualities p{
     color: #e5e7eb;
-    font-family: 'Roboto';
+    font-family: 'Roboto-thin';
     font-size: 18px;
 }
 .triforce img{
