--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 @font-face {
     font-family: 'Roboto';
     src: url(../Fonts/Roboto-Medium.ttf);
@@ -18,6 +19,7 @@
     font-family: 'Roboto-Bold';
     src: url(../Fonts/Roboto-Bold.ttf);
 }
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -38,14 +40,17 @@ header{
     color: #f9faf8;
     text-decoration: none;
 }
-button{
-    margin-top: 6rem;
+.Go-back{
+    margin: 3rem 0 3rem 0;
     width: 6rem;
     height: 1.6rem;
     font-family: 'Roboto-Medium', sans-serif;
     background: #3882f6;
-    border: solid 2px #f9faf8;
+    border: transparent;
     border-radius: 5px;
+}
+.Go-back:hover{
+    border:solid 2px #f9faf8;
 }
 button a{
     text-decoration: none;
@@ -61,6 +66,119 @@ ul{
     display: flex;
     gap: 1.5em;
     list-style: none;
+}
+.contact-container{
+    display: flex;
+    justify-content: center;
+}
+.img-container{
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    height: 49rem;
+}
+.img-container .img-bg{
+    background: url(../src/contact-bg.jpg);
+    background-size: cover;
+    width: 20rem;
+    height: 50rem;
+}
+.img-container .contact-networks{
+    width: 20rem;
+    height: 25rem;
+    background-color: #f9faf8;
+    padding: 2rem 2rem;
+}
+.contact-networks .agency{
+    font-family: 'Roboto-Bold','sans-serif';
+    font-size: 20px;
+    font-weight: 700;
+    color: #1f2937;
+}
+.agency-txt{
+    font-family: 'Roboto-medium','sans-serif';
+    font-size: 14px;
+    color: #87909d;
+    line-height: 1.2rem;
+}
+.social{
+    margin-top: 3.5rem;
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    justify-content: flex-start;
+}
+.social .bi{
+font-size: 28px;
+cursor: pointer;
+}
+form{
+    margin-top: 2rem;
+}
+.get-in-touch{
+    background: #f9faf8;
+    padding: 2rem 3rem;
+    width: 50rem;
+}
+.get-in-touch h1{
+    font-family: 'Roboto-Bold','sans-serif';
+    font-size: 36px;
+    font-weight: 700;
+    color: #1f2937;
+
+}
+.get-in-touch strong{
+    font-family: 'Roboto-Bold','sans-serif';
+    font-size: 36px;
+    color: #000;
+}
+.get-in-touch p{
+    font-family: 'Roboto-medium','sans-serif';
+    font-size: 18px;
+    color: #87909d;
+}
+.name{
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 2rem;
+    
+}
+.name .input-name{
+    height: 4rem;
+    width: 21rem;
+    font-family: 'Roboto-thin';
+    border: solid 2px #3882f6;
+}
+.user-info{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 2rem;
+}
+.user-info .inputs{
+    height: 4rem;
+    width: 44rem;
+    font-family: 'Roboto-thin';
+    border: solid 2px #3882f6;
+}
+textarea{
+    height: 14rem;
+    width: 44rem;
+    font-family: 'Roboto-thin';
+    margin-bottom: 2rem; 
+    border: solid 2px #3882f6;
+}
+.send{
+    font-family: 'Roboto-Bold';
+    width: 44rem;
+    height: 3.5rem;
+    background: #3882f6;
+    border: transparent;
+    color: #f9faf8;
+    cursor: pointer;
+}
+.send:hover{
+    border: solid 2px #1f2937;
 }
 footer{
     background-color: #1f2937;
