--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ ul{
 .content{
     display: flex;
     justify-content: space-between;
+    gap: 2rem;
 }
 .content-container{
     width: 35rem;
@@ -145,7 +146,7 @@ ul{
     background: url(./src/effective-cars.jpg) center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position-y: -5rem;
+    background-position-y: -3rem;
     -webkit-animation: shadow-pop-tr 1s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 	animation: shadow-pop-tr 1s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
