--- a/css/about-us.css
+++ b/css/about-us.css
@@ -365,7 +365,7 @@ h4{
     font-family: 'Roboto-thin';
     font-size: 18px;
 }
-.triforce img{
+.rocket img{
     width: 20rem;
     height: 20rem;
 }
